--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ body, html, .App, #root, .auth-wrapper {
 }
 .forgot-password,
 .forgot-password a {
-  text-align: right;
+  text-align: left;
   font-size: 13px;
   padding-top: 10px;
   color: #7f7d7d;
