--- a/src/toolsComponents/SemiPage.css
+++ b/src/toolsComponents/SemiPage.css
@@ -1,20 +1,20 @@
 .semipage-modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .semipage-modal {
-    background: white;
-    padding: 10px;
-    border-radius: 8px;
-    text-align: center;
-    width: 75%;
-  }
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.semipage-modal {
+  background: white;
+  padding: 10px;
+  border-radius: 8px;
+  width: 75%;
+  max-height: 80vh; /* Set a maximum height */
+  overflow-y: auto; 
+}
